css changed for testing purposes to try and rectify ongoing issue with cards not flipping correctly on iOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,10 +141,12 @@ i {
      justify-content: center;
      transform: scale(1);
      transform-style: preserve-3d;
-     transition: transform .5s;
-     -webkit-transform: scale(1);
+     transition-property: all; 
+     transition-timing-function: linear;
+     -webkit-tranform: scale(1);
      -webkit-transform-style: preserve-3d;
-     -webkit-transition: transform .5s;
+     -webkit-transition-property: all;
+     -webkit-transition-timing-function: linear;
      box-shadow: 1px 1px 1px rgba(0,0,0,.3);
 }
 
@@ -171,13 +173,18 @@ img {
      padding: 5px;
      position: absolute;
      border-radius: 5px;
+     opacity: 1;
      backface-visibility: hidden;
      -webkit-backface-visibility: hidden;
 }
 
 .front-face {
      transform: rotateY(180deg);
+     transition-property: opacity;
+     transition-timing-function: linear;
      -webkit-transform: rotateY(180deg); 
+     -webkit-transition-property: opacity;
+     -webkit-transition-timing-function: linear;
 }
 
 /* Footer*/
